[gd_scene load_steps=20 format=3 uid="uid://benhlcikss48w"]

[ext_resource type="Script" path="res://scenes/enemies/elite_enemy.gd" id="1_kvgb1"]
[ext_resource type="PackedScene" uid="uid://h1yu104a5hd1" path="res://scenes/projectiles/elite_projectile.tscn" id="2_8n03e"]
[ext_resource type="PackedScene" uid="uid://c8w0dawifubjw" path="res://scenes/gpu_particles_2d.tscn" id="3_obl2c"]
[ext_resource type="Texture2D" uid="uid://bt7sjrlrgndwa" path="res://assets/recent/Enemies/Kla'ed/Base/PNGs/Kla'ed - Bomber - Base.png" id="4_aiif5"]
[ext_resource type="Texture2D" uid="uid://dorr58hdbhdx2" path="res://assets/recent/Enemies/Kla'ed/Engine/PNGs/Kla'ed - Bomber - Engine.png" id="5_i3iyb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vys6y"]
radius = 45.2217

[sub_resource type="AtlasTexture" id="AtlasTexture_bj4nj"]
atlas = ExtResource("4_aiif5")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_75o6p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj4nj")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_tvs1l"]
atlas = ExtResource("5_i3iyb")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3iw4"]
atlas = ExtResource("5_i3iyb")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dc5hp"]
atlas = ExtResource("5_i3iyb")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nql56"]
atlas = ExtResource("5_i3iyb")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt7i7"]
atlas = ExtResource("5_i3iyb")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ls4lx"]
atlas = ExtResource("5_i3iyb")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbu0s"]
atlas = ExtResource("5_i3iyb")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3gsx"]
atlas = ExtResource("5_i3iyb")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk4ip"]
atlas = ExtResource("5_i3iyb")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv077"]
atlas = ExtResource("5_i3iyb")
region = Rect2(576, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_61x1r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvs1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3iw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dc5hp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nql56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt7i7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls4lx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbu0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3gsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk4ip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv077")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="EliteEnemy" type="Area2D" groups=["enemy"]]
scale = Vector2(1.3, 1.3)
script = ExtResource("1_kvgb1")
energy_sphere = ExtResource("2_8n03e")
explosion_particle = ExtResource("3_obl2c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vys6y")

[node name="Ship" type="AnimatedSprite2D" parent="."]
position = Vector2(0.769231, 6.92308)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_75o6p")
animation = &"idle"
flip_v = true

[node name="Engine" type="AnimatedSprite2D" parent="Ship"]
position = Vector2(-0.307693, -0.307692)
sprite_frames = SubResource("SpriteFrames_61x1r")
autoplay = "default"
frame_progress = 0.293941
flip_v = true

[node name="BoostedTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 2.1
autostart = true

[node name="BoostedCooldownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_attacked_by_player"]
[connection signal="timeout" from="BoostedTimer" to="." method="_on_boost_end"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown"]
[connection signal="timeout" from="BoostedCooldownTimer" to="." method="_on_boosted_cooldown_up"]
